Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Account__c.field-meta.xml
<CustomField>
    <fullName>mfg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>