Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Activation_Date__c</fullName>
    <inlineHelpText>Choose the date when schedule generation starts.</inlineHelpText>
    <label>Activation Date</label>
    <type>Date</type>
</CustomField>