Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>mfg_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.OwnerId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>