Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>