Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>mfg_Cancellation_Date__c</fullName>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>