Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>mfg_Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>