Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>mfg_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.mfg_Account__c</field>
            <operation>equals</operation>
            <valueField>Opportunity.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>