Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Order__c.field-meta.xml
<CustomField>
    <fullName>mfg_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>