Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>mfg_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Sales Agreements</relationshipLabel>
    <relationshipName>Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>