Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Schedule_count__c.field-meta.xml
<CustomField>
    <fullName>mfg_Schedule_count__c</fullName>
    <inlineHelpText>Choose the total number of schedule periods you want.
The system will split the total quantity across these periods.</inlineHelpText>
    <label>Schedule count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>