Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/fields/mfg_Total_Agreement_Amount__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Agreement_Amount__c</fullName>
    <label>Total Agreement Amount</label>
    <summarizedField>mfg_Agreement_Product__c.mfg_Sales_Price__c</summarizedField>
    <summaryForeignKey>mfg_Agreement_Product__c.mfg_Sales_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>