Manufactoring/force-app/main/default/objects/mfg_Sales_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>mfg_Sales_Agreement_Number__c</columns>
    <columns>mfg_Account__c</columns>
    <columns>mfg_Status__c</columns>
    <columns>mfg_Activation_Date__c</columns>
    <columns>mfg_Schedule_count__c</columns>
    <columns>mfg_Schedule_Frequency__c</columns>
    <columns>mfg_Total_Agreement_Amount__c</columns>
    <columns>mfg_Total_Agreement_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>